gym member api's
